@startuml

abstract class User {
    - id: int
    - firstName: string
    - lastName: string
    - email: string
    - password: string
    + login()
    + logout()
}

class Customer extends User {
    - status: UserStatus
    + addPaymentCard()
    + createBooking()
}

class Admin extends User {
    + addMovie()
    + updateMovie()
    + deleteMovie()
    + manageUsers()
    + managePromotions()
    + manageTicketPrices()
}

class PaymentCard {
    - cardNumber: string
    - billingAddress: string
    - expirationDate: Date
    + validateCard()
    + updateCardInfo()
}

enum UserStatus {
    ACTIVE
    SUSPENDED
    INACTIVE
}

enum TicketType {
    CHILD
    ADULT
    SENIOR
}

class Booking {
    - bookingId: int
    - total: double
    - bookingDate: Date
    + addTicket()
    + applyPromotion()
}

class Ticket {
    - ticketId: int
    - type: TicketType
    + calculatePrice()
    + assignSeat()
}

class Promotion {
    - promoCode: string
    - discount: double
    + validatePromotion()
    + applyDiscount()
}

class Show {
    - showId: int
    - showTime: DateTime
    - duration: int
    + getSoldTickets()
    + getShowEndTime()
}

class ShowRoom {
    - showroomId: int
    + getAvailableSeats()
    + assignSeat()
}

class Seat {
    - seatId: int
    - row: int
    - number: int
    + getSeatLabel()
    + isAvailable()
}

class Movie {
    - movieId: int
    - title: string
    - category: string
    - cast: string[]
    - director: string
    - producer: string
    - reviews: string[]
    - trailerImage: string
    - trailerUrl: string
    - rating: string
    - description: string
    + getDetails()
    + updateDetails()
}

class FavoriteMovies {
    - movie: Movie
    + addMovie()
    + removeMovie()
    
}

Customer "1" *-- "0..3" PaymentCard
Customer "1" *-- "0..*" Booking
Customer "1" -- "0..*" FavoriteMovies
Movie "1" -- "*" FavoriteMovies

Booking "1" *-- "1..*" Ticket
Booking "*" --> "1" PaymentCard
Booking "1" -- "0..1" Promotion

Ticket "1" -- "1" Seat
Ticket "*" --> "1" Show

Movie "1" o-- "0..*" Show

ShowRoom "1" o-- "0..*" Show
ShowRoom "1" *-- "1..*" Seat

Admin -- Movie
Admin -- Promotion
Admin -- User

@enduml